[package]
name = "ffutility"
version = "0.9.0"
edition = "2021"
license = "MPL-2.0"
description = "A grab bag of video streaming utilities"
homepage = "https://github.com/therishidesai/ffutility"
repository = "https://github.com/therishidesai/ffutility"
readme = "README.md"

[features]
opencv = ["dep:opencv"]
v4l = ["dep:v4l"]

[dependencies]
anyhow = "1.0.93"
bytes = "1.8.0"
ffmpeg-next = "7.1.0"
futures = "0.3.31"
h264-reader = "0.8.0"
hang = "0.4.0"
moq-native = "0.7.1"
moq-lite = "0.3.3"
opencv = { version = "0.93.4", optional = true }
serde = { version = "1.0.215", features = ["derive"] }
thiserror = "2.0.3"
tokio = { version = "1.41.1", features = ["full"] }
tokio-stream = { version = "0.1.16", features = ["full"] }
tracing = "0.1.40"
web-transport-quinn = "0.7.2"

# only available on linux
[target.'cfg(target_os = "linux")'.dependencies]
v4l = { version = "0.14.0", optional = true }


# [patch.crates-io]
# h264-reader = { git = "https://github.com/therishidesai/h264-reader", branch = "patch/remove-lfs" }

[dev-dependencies]
anyhow = "1.0.93"
bytes = "1.8.0"
futures = "0.3.31"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
url = { version = "2.5.3", features = ["serde"] }
