[package]
name = "ffutility"
version = "0.12.0"
edition = "2021"
license = "MPL-2.0"
description = "A grab bag of video streaming utilities"
homepage = "https://github.com/therishidesai/ffutility"
repository = "https://github.com/therishidesai/ffutility"
readme = "README.md"

[features]
opencv = ["dep:opencv"]
v4l = ["dep:v4l"]
streams = ["dep:tokio", "dep:tokio-stream", "dep:tokio-util"]

[dependencies]
anyhow = "1.0.93"
bytes = "1.8.0"
ffmpeg-next = "7.1.0"
opencv = { version = "0.93.4", optional = true }
serde = { version = "1.0.215", features = ["derive"] }
thiserror = "2.0.3"
tokio = { version = "1.47.1", features = ["sync"], optional = true }
tokio-stream = { version = "0.1.17", optional = true }
tokio-util = { version = "0.7.16", features = ["io"], optional = true }
tracing = "0.1.40"

# only available on linux
[target.'cfg(target_os = "linux")'.dependencies]
v4l = { version = "0.14.0", optional = true }

[dev-dependencies]
anyhow = "1.0.93"
bytes = "1.8.0"
futures = "0.3.31"
h264-parser = "0.3.0"
# hang = "0.6.0"
hang = { path = "/home/rishi/moq/rs/hang" }
moq-native = "0.8.4"
tokio = { version = "1.47.1", features = ["full"] }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
url = { version = "2.5.3", features = ["serde"] }
